--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Fash-in
 
 server.port=1211
 
-spring.datasource.url=jdbc:mysql://localhost
+spring.datasource.url=jdbc:mysql://localhost/fash_in
 spring.datasource.username=root
 spring.datasource.password=${mysql.password}
 
